--- a/Source/WL2.Editor/WL2.Editor/MainWindow.xaml
+++ b/Source/WL2.Editor/WL2.Editor/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="WL2.Editor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:v="clr-namespace:WL2.Editor.Views;assembly=WL2.Editor.Views"
+        Title="Wasteland 2 Save Game Editor" Height="350" Width="525">
     <Grid>
-        
+        <v:EditorView DataContext="{Binding EditorViewModel, Source={StaticResource Locator}}" />
     </Grid>
 </Window>
