--- a/Source/WL2.Editor/WL2.Editor.Views/EditorView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/EditorView.xaml
@@ -2,11 +2,25 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:WL2.Editor.ViewModels;assembly=WL2.Editor.ViewModels"
+             xmlns:v="clr-namespace:WL2.Editor.Views"
+             xmlns:assisticant="clr-namespace:Assisticant;assembly=Assisticant.XAML"
              Loaded="EditorView_Loaded"
              Unloaded="EditorView_Unloaded"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type vm:CharacterViewModel}">
+            <v:CharacterView />
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type vm:StatisticViewModel}">
+            <v:StatisticView />
+        </DataTemplate>
+    </UserControl.Resources>
+    
     <DockPanel LastChildFill="True">
         <Menu DockPanel.Dock="Top" IsMainMenu="True">
             <MenuItem Header="_File">
@@ -23,6 +37,9 @@
                     <Setter Property="Header" Value="{Binding Name}" />
                 </Style>
             </TabControl.ItemContainerStyle>
+            <TabControl.ContentTemplateSelector>
+                <assisticant:ViewSelector />
+            </TabControl.ContentTemplateSelector>
         </TabControl>
     </DockPanel>
 </UserControl>
