--- a/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
@@ -5,10 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:converters="clr-namespace:WL2.Editor.Views.Converters"
              mc:Ignorable="d" 
-             Height="Auto" Width="Auto">
+             d:DataContext="{Binding AttributeViewModel, Source={StaticResource Locator}}"
+             Height="Auto" Width="Auto"
+             FontFamily="Courier New" FontSize="24" FontWeight="Bold"
+             Background="#000000">
     
     <UserControl.Resources>
-        <converters:StatisticFillValueConverter x:Key="FillConverter" FilledBrush="#00FF00" EmptyBrush="#FFFFFF" />
+        <converters:StatisticFillValueConverter x:Key="FillConverter" FilledBrush="#576C73" EmptyBrush="#313131" />
     </UserControl.Resources>
     
     <Grid>
@@ -19,47 +22,63 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 
-                <TextBlock Grid.Row="0" Text="{Binding Name}" Margin="10 10 10 5" />
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
                 
-                <Grid Grid.Row="1">
+                <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Source="{Binding Image}" Height="52" Width="52" Margin="6"/>
+                
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}" Margin="6 6 6 3" Foreground="#FF9635" />
+                
+                <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Margin="10 5 5 10" MinWidth="20" MinHeight="20" Command="{Binding Decrement}">-</Button>
+                    
+                    <Button Grid.Column="0" Margin="6 3 3 6" Command="{Binding Decrement}" Width="32" Height="32" FontSize="24">-</Button>
 
-                    <Rectangle Grid.Column="1" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="5 5 2 10"
+                    <Border Grid.Column="1" BorderBrush="#88A9B4" BorderThickness="4" Padding="0" Margin="3 3 3 6">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            
+                            <Rectangle Grid.Column="0" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="4 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=1}" />
-                    <Rectangle Grid.Column="2" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="1" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=2}" />
-                    <Rectangle Grid.Column="3" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="2" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=3}" />
-                    <Rectangle Grid.Column="4" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="3" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=4}" />
-                    <Rectangle Grid.Column="5" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="4" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=5}" />
-                    <Rectangle Grid.Column="6" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="5" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=6}" />
-                    <Rectangle Grid.Column="7" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="6" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=7}" />
-                    <Rectangle Grid.Column="8" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="7" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=8}" />
-                    <Rectangle Grid.Column="9" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 2 10"
+                            <Rectangle Grid.Column="8" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=9}" />
-                    <Rectangle Grid.Column="10" StrokeThickness="1" Stroke="#000000" Width="20" Height="20" Margin="2 5 5 10"
+                            <Rectangle Grid.Column="9" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 4 4"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=10}" />
 
-                    <Button Grid.Column="11" Margin="5 5 10 10" MinWidth="20" MinHeight="20" Command="{Binding Increment}">+</Button>
+                        </Grid>
+                    </Border>
+                    <Button Grid.Column="2" Margin="3 3 6 6" Command="{Binding Increment}"  Width="32" Height="32" FontSize="24">+</Button>
                 </Grid>
             </Grid>
         </Border>  
