--- a/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DataContext="{Binding AttributeViewModel, Source={StaticResource Locator}}"
              Height="Auto" Width="Auto"
-             FontFamily="Courier New" FontSize="24" FontWeight="Bold"
+             FontFamily="Courier New" 
              Background="#000000">
     
     <UserControl.Resources>
@@ -24,23 +24,35 @@
                 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+                    </Grid.ColumnDefinitions>
                 
-                <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Source="{Binding Image}" Height="52" Width="52" Margin="6"/>
+                <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Source="{Binding Image}" Height="32" Width="32" Margin="4 4 2 4"/>
                 
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}" Margin="6 6 6 3" Foreground="#FF9635" />
+                <TextBlock Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Text="{Binding CurrentValue}"
+                           HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Width="24" TextAlignment="Center"
+                           FontSize="18" FontWeight="Bold"
+                           Margin="2 4 4 2" Foreground="#FF9635" />
                 
-                <Grid Grid.Row="1" Grid.Column="1">
+                <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Name}" 
+                           FontSize="18" FontWeight="Bold"
+                           Margin="2 4 4 2" Foreground="#FF9635" />
+                
+                <Grid Grid.Row="1" Grid.Column="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    
-                    <Button Grid.Column="0" Margin="6 3 3 6" Command="{Binding Decrement}" Width="32" Height="32" FontSize="24">-</Button>
 
-                    <Border Grid.Column="1" BorderBrush="#88A9B4" BorderThickness="4" Padding="0" Margin="3 3 3 6">
+                    <Button Grid.Column="0" Margin="2 2 2 4" Command="{Binding Increment}"  
+                            Width="18" Height="18" FontSize="12" 
+                            HorizontalContentAlignment="Center"
+                            VerticalContentAlignment="Center">-</Button>
+                    
+                    <Border Grid.Column="1" BorderBrush="#88A9B4" BorderThickness="2" Padding="0" Margin="2 2 2 4">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -55,30 +67,34 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             
-                            <Rectangle Grid.Column="0" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="4 4 2 4"
+                            <Rectangle Grid.Column="0" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="2 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=1}" />
-                            <Rectangle Grid.Column="1" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="1" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=2}" />
-                            <Rectangle Grid.Column="2" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="2" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=3}" />
-                            <Rectangle Grid.Column="3" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="3" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=4}" />
-                            <Rectangle Grid.Column="4" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="4" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=5}" />
-                            <Rectangle Grid.Column="5" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="5" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=6}" />
-                            <Rectangle Grid.Column="6" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="6" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=7}" />
-                            <Rectangle Grid.Column="7" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="7" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=8}" />
-                            <Rectangle Grid.Column="8" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 2 4"
+                            <Rectangle Grid.Column="8" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 1 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=9}" />
-                            <Rectangle Grid.Column="9" StrokeThickness="0" Stroke="#000000" Width="32" Height="16" Margin="2 4 4 4"
+                            <Rectangle Grid.Column="9" StrokeThickness="0" Stroke="#000000" Width="20" Height="10" Margin="1 2 2 2"
                                Fill="{Binding Path=CurrentValue, Converter={StaticResource FillConverter}, ConverterParameter=10}" />
 
                         </Grid>
                     </Border>
-                    <Button Grid.Column="2" Margin="3 3 6 6" Command="{Binding Increment}"  Width="32" Height="32" FontSize="24">+</Button>
+                    
+                    <Button Grid.Column="2" Margin="2 2 4 4" Command="{Binding Increment}"  
+                            Width="18" Height="18" FontSize="12" 
+                            HorizontalContentAlignment="Center"
+                            VerticalContentAlignment="Center">+</Button>
                 </Grid>
             </Grid>
         </Border>  
