--- a/Source/WL2.Editor/WL2.Editor.Views/CharacterView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/CharacterView.xaml
@@ -4,9 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:assisticant="clr-namespace:Assisticant;assembly=Assisticant.XAML"
+             xmlns:vm="clr-namespace:WL2.Editor.ViewModels;assembly=WL2.Editor.ViewModels"
+             xmlns:v="clr-namespace:WL2.Editor.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             Background="#000000"
+             d:DataContext="{Binding CharacterViewModel, Source={StaticResource Locator}}">
     
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type vm:StatisticViewModel}">
+            <v:StatisticView />
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
