Added tracking attribute points and skill points

--- a/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/StatisticView.xaml
@@ -12,6 +12,16 @@
     
     <UserControl.Resources>
         <converters:StatisticFillValueConverter x:Key="FillConverter" FilledBrush="#576C73" EmptyBrush="#313131" />
+        <Style x:Key="FocusVisual">
+        	<Setter Property="Control.Template">
+        		<Setter.Value>
+        			<ControlTemplate>
+        				<Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+        			</ControlTemplate>
+        		</Setter.Value>
+        	</Setter>
+        </Style>
+        
     </UserControl.Resources>
     
     <Grid>
@@ -38,7 +48,7 @@
                 
                 <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Name}" 
                            FontSize="18" FontWeight="Bold"
-                           Margin="2 4 4 2" Foreground="#FF9635" />
+                           Margin="2 4 4 0" Foreground="#FF9635" />
                 
                 <Grid Grid.Row="1" Grid.Column="2">
                     <Grid.ColumnDefinitions>
@@ -47,12 +57,12 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" Margin="2 2 2 4" Command="{Binding Increment}"  
-                            Width="18" Height="18" FontSize="12" 
-                            HorizontalContentAlignment="Center"
-                            VerticalContentAlignment="Center">-</Button>
+                    <Button Grid.Column="0" Margin="2 0 2 4" Command="{Binding Decrement}"  
+                            Width="{Binding ElementName=Border, Path=ActualHeight}" 
+                            Height="{Binding ElementName=Border, Path=ActualHeight}" 
+                            FontSize="10" FontWeight="Bold">-</Button>
                     
-                    <Border Grid.Column="1" BorderBrush="#88A9B4" BorderThickness="2" Padding="0" Margin="2 2 2 4">
+                    <Border Name="Border" Grid.Column="1" BorderBrush="#88A9B4" BorderThickness="2" Padding="0" Margin="2 0 2 4">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -91,10 +101,10 @@
                         </Grid>
                     </Border>
                     
-                    <Button Grid.Column="2" Margin="2 2 4 4" Command="{Binding Increment}"  
-                            Width="18" Height="18" FontSize="12" 
-                            HorizontalContentAlignment="Center"
-                            VerticalContentAlignment="Center">+</Button>
+                    <Button Grid.Column="2" Margin="2 0 4 4" Command="{Binding Increment}"
+                            Width="{Binding ElementName=Border, Path=ActualHeight}" 
+                            Height="{Binding ElementName=Border, Path=ActualHeight}" 
+                            FontSize="10" FontWeight="Bold">+</Button>
                 </Grid>
             </Grid>
         </Border>  
