--- a/Source/WL2.Editor/WL2.Editor/MainWindow.xaml
+++ b/Source/WL2.Editor/WL2.Editor/MainWindow.xaml
@@ -2,7 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:v="clr-namespace:WL2.Editor.Views;assembly=WL2.Editor.Views"
-        Title="Wasteland 2 Save Game Editor" SizeToContent="WidthAndHeight" MinHeight="300" MinWidth="500">
+        Title="Wasteland 2 Save Game Editor" 
+        SizeToContent="WidthAndHeight" 
+        MinHeight="300" MinWidth="500"
+        SnapsToDevicePixels="True">
     <Grid>
         <v:EditorView DataContext="{Binding EditorViewModel, Source={StaticResource Locator}}" />
     </Grid>
