--- a/Source/WL2.Editor/WL2.Editor.Views/CharacterView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/CharacterView.xaml
@@ -23,6 +23,11 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
         <StackPanel Grid.Column="0">
             <TextBlock Text="Attributes" 
                    FontFamily="Courier New" FontSize="18" FontWeight="Bold" 
@@ -90,5 +95,25 @@
                 </ItemsControl.ItemTemplateSelector>
             </ItemsControl>
         </StackPanel>
+
+        <TextBlock Grid.Row="1" Grid.Column="0" Margin="6 3 3 6"
+                   FontFamily="Courier New" FontSize="18" FontWeight="Bold" Foreground="#FF9635">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="Attribute Points: {0} / {1}">
+                    <Binding Path="CurrentAttributePoints" />
+                    <Binding Path="InitialAttributePoints" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+
+        <TextBlock Grid.Row="1" Grid.Column="1" Margin="3 3 3 6"
+                   FontFamily="Courier New" FontSize="18" FontWeight="Bold" Foreground="#FF9635">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="Skill Points: {0} / {1}">
+                    <Binding Path="CurrentSkillPoints" />
+                    <Binding Path="InitialSkillPoints" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
     </Grid>
 </UserControl>
