--- a/Source/WL2.Editor/WL2.Editor.Views/EditorView.xaml
+++ b/Source/WL2.Editor/WL2.Editor.Views/EditorView.xaml
@@ -121,6 +121,16 @@
             </Setter>
         </Style>
 
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <SolidColorBrush x:Key="Button.Static.Background" Color="#FF313131"/>
         <SolidColorBrush x:Key="Button.Static.Border" Color="#FF88A9B4"/>
         <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FF88A9B4"/>
@@ -139,6 +149,7 @@
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Padding" Value="1"/>
+            <Setter Property="FontFamily" Value="Courier New" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
@@ -170,15 +181,24 @@
     </UserControl.Resources>
 
     <DockPanel LastChildFill="True">
-        <Menu DockPanel.Dock="Top" IsMainMenu="True">
-            <MenuItem Header="_File">
-                <MenuItem Header="_Open Save File" Command="{Binding OpenFile}" />
-                <MenuItem Header="_Save" Command="{Binding SaveFile}" />
-            </MenuItem>
-        </Menu>
+        <DockPanel DockPanel.Dock="Top" LastChildFill="False">
+            <Button DockPanel.Dock="Left" Command="{Binding OpenFile}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="6 6 3 6">Open File</Button>
+            <Button DockPanel.Dock="Left" Command="{Binding SaveFile}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="3 6 6 6">Save File</Button>
 
-        <TextBlock DockPanel.Dock="Bottom" Text="{Binding ElementName=View, Path=ActualWidth}" Foreground="#FFFFFF" />
-        <TabControl ItemsSource="{Binding Characters}" Background="#000000" ItemContainerStyle="{DynamicResource WastelandTabItem}" Style="{DynamicResource WastelandTabControl}">
+            <Button DockPanel.Dock="Right" Command="{Binding RestoreAllSkills}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="6 6 3 6">Restore Skills: All</Button>
+            <Button DockPanel.Dock="Right" Command="{Binding ResetAllSkills}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="6 6 3 6">Reset Skills: All</Button>
+            <Button DockPanel.Dock="Right" Command="{Binding RestoreAllAttributes}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="6 6 3 6">Restore Attributes: All</Button>
+            <Button DockPanel.Dock="Right" Command="{Binding ResetAllAttributes}"
+                    FontSize="18" FontWeight="Bold" Padding="6" Margin="6 6 3 6">Reset Attributes: All</Button>
+        </DockPanel>
+        
+        <TabControl ItemsSource="{Binding Characters}" ItemContainerStyle="{DynamicResource WastelandTabItem}" Style="{DynamicResource WastelandTabControl}"
+                    Background="#000000" Margin="6 3 6 6">
             <TabControl.ContentTemplateSelector>
                 <assisticant:ViewSelector />
             </TabControl.ContentTemplateSelector>
